--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"Panely pod adresním řádkem (v2) --- nastaveno [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 je pro některá rozšíření a kompletní témata vzhledu!">
 <!ENTITY Ctr_tabsontopI1	"Přidává atribut pro [tabsontop=true/false]">
-<!ENTITY Ctr_tabsintitlebar	"Záhlaví okna &brandShortName; (předvolba about:config)">
+<!ENTITY Ctr_tabsintitlebar	"Záhlaví okna &brandShortName;">
 <!ENTITY Ctr_tabwidthdef	"(výchozí)">
 <!ENTITY Ctr_tabwidthcla	"(klasický)">
 <!ENTITY Ctr_tabminheight	"Výška:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Hodnoty pod 48px působí většinou chyby!">
 <!ENTITY Ctr_square_edges	"Hranaté horní rohy">
 <!ENTITY Ctr_tttitlebar		"Název panelu v &brandShortName; liště aplikace">
-<!ENTITY Ctr_tabinsertion	"Vložit související panel za aktuální (about:config)">
+<!ENTITY Ctr_tabinsertion	"Vložit související panel za aktuální">
 <!ENTITY Ctr_emptytfavico	"Zobrazit faviconu (v případě, že ji stránka nenabízí)">
 <!ENTITY Ctr_emptytfavico_n	"Žádná">
 <!ENTITY Ctr_emptytfavico_g	"Výchozí">
@@ -70,7 +70,7 @@
 <!ENTITY Ctr_closei_def		"Defaultní icony">
 <!ENTITY Ctr_closeonleft	"Alternativní pozice na panelu">
 <!ENTITY Ctr_closetabbig	"Větší ikona (20x20 px)">
-<!ENTITY Ctr_close_wwltab	"Zavřít okno s posledním viditelným panelem (about:config)">
+<!ENTITY Ctr_close_wwltab	"Zavřít okno s posledním viditelným panelem">
 
 <!ENTITY Ctr_hctpinfotab	"Některá nastavení nejsou kompatibilní s rozšířením 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Tlačítko aplikace není kompatibilní s rozšířením 'Hide Caption Titlebar Plus'.">
@@ -167,7 +167,7 @@
 <!ENTITY Ctr_ctroldsearch	"Starý styl vyhledávání">
 <!ENTITY Ctr_ctroldsearchc	"Po vyhledávání vyčistit pole hledání">
 <!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
-<!ENTITY Ctr_search_oit		"Otevřít vyhledávání v novém panelu (předvolba about:config)">
+<!ENTITY Ctr_search_oit		"Otevřít vyhledávání v novém panelu">
 <!ENTITY Ctr_osearch_meoit	"Klik kolečkem myši: prohledávat nové panely 'na pozadí'">
 <!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
 <!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_am_buticons	"Správce rozšíření: nahradit text tlačítka ikonou">
 <!ENTITY Ctr_am_hovshowb	"Správce rozšíření: tlačítko zobrazit jen po najetí myši">
 <!ENTITY Ctr_addonversion	"Správce rozšíření: zobrazit verzi rozšíření">
-<!ENTITY Ctr_xpinstallui	"Správce rozšíření: starý vzhled (předvolba about:config)">
+<!ENTITY Ctr_xpinstallui	"Správce rozšíření: starý vzhled">
 <!ENTITY Ctr_bmbutton		"Tlačítko menu záložek">
 <!ENTITY Ctr_hiderecentbm	"Záložky (bublina): skrýt posledně přidané záložky">
 <!ENTITY Ctr_hideeditbm		"Hvězdička záložek: skrýt bublinu (pokud stránka není v záložkách)">
@@ -266,10 +266,10 @@
 <!ENTITY Ctr_lbsbsize		"Volitelná šířka pro adresní řádek a vyhledávač">
 <!ENTITY Ctr_searchbar		"Vyhledávač">
 <!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
-<!ENTITY Ctr_urlbar_uc		"Zakázat automatické doplňování (předvolba about:config)">
+<!ENTITY Ctr_altautocompl	"Alternative appearance">
+<!ENTITY Ctr_urlbar_uc		"Zakázat automatické doplňování">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsugres		"Number of results">
 <!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Umístění menu">
@@ -335,10 +335,10 @@
 <!ENTITY Ctr_tabthrobber	"Defaultní obrázek nahrávání">
 <!ENTITY Ctr_bmanimation	"Animace přidání záložky">
 <!ENTITY Ctr_pananimation	"Animace otevření panelu">
-<!ENTITY Ctr_tabanimation	"Animace zavření/otevření panelu (předvolba about:config)">
-<!ENTITY Ctr_dlanimation	"Animace 'upozornění stahování' (předvolba about:config)">
-<!ENTITY Ctr_fsanimation	"Animace ve fullscreenu (about:config)">
-<!ENTITY Ctr_fsaduration	"Animace ve fullscreenu pro obsah HTML5 (about:config)">
+<!ENTITY Ctr_tabanimation	"Animace zavření/otevření panelu">
+<!ENTITY Ctr_dlanimation	"Animace 'upozornění stahování'">
+<!ENTITY Ctr_fsanimation	"Animace ve fullscreenu">
+<!ENTITY Ctr_fsaduration	"Animace ve fullscreenu pro obsah HTML5">
 
 <!ENTITY Ctr_toolsitem		"Položka v nabídce Nástroje">
 <!ENTITY Ctr_appmenuitem	"Položka v nabídce tlačítka aplikace">
