--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"Faneblade skal ikke være øverst (v2) --- [tabsontop=false] attribut">
 <!ENTITY Ctr_tabsontopW1	"v2 er kun til nogle tilføjelser og komplette temaer!">
 <!ENTITY Ctr_tabsontopI1	"Attributten [tabsontop=true/false] bliver tilføjet">
-<!ENTITY Ctr_tabsintitlebar	"&brandShortName; i titellinjen (about:config)">
+<!ENTITY Ctr_tabsintitlebar	"&brandShortName; i titellinjen">
 <!ENTITY Ctr_tabwidthdef	"(standard)">
 <!ENTITY Ctr_tabwidthcla	"(klassisk)">
 <!ENTITY Ctr_tabminheight	"Højde:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Værdier under 48px vil for det meste give fejl i grafikken!">
 <!ENTITY Ctr_square_edges	"Firkantede øverste hjørner">
 <!ENTITY Ctr_tttitlebar		"Fanebladstitel i &brandShortName;-titellinje">
-<!ENTITY Ctr_tabinsertion	"Indsæt relaterede faneblad efter aktive faneblad (about:config)">
+<!ENTITY Ctr_tabinsertion	"Indsæt relaterede faneblad efter aktive faneblad">
 <!ENTITY Ctr_emptytfavico	"Show favicon (if a site does not offer one)">
 <!ENTITY Ctr_emptytfavico_n	"None">
 <!ENTITY Ctr_emptytfavico_g	"Generic">
@@ -70,7 +70,7 @@
 <!ENTITY Ctr_closei_def		"Standard ikoner">
 <!ENTITY Ctr_closeonleft	"Alternativ placering på faneblad">
 <!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
-<!ENTITY Ctr_close_wwltab	"Luk vindue med det sidste synlige faneblad (about:config)">
+<!ENTITY Ctr_close_wwltab	"Luk vindue med det sidste synlige faneblad">
 
 <!ENTITY Ctr_hctpinfotab	"Nogle varianter af faneblade er ikke kompatible med tilføjelsen 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Knapper på titellinje er ikke kompatible med tilføjelsen 'Hide Caption Titlebar Plus'.">
@@ -167,7 +167,7 @@
 <!ENTITY Ctr_ctroldsearch	"Gamle søgning">
 <!ENTITY Ctr_ctroldsearchc	"Ryd søgeboks efter søgning">
 <!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
-<!ENTITY Ctr_search_oit		"Åbn søgning i nyt faneblad (about:config-indstilling)">
+<!ENTITY Ctr_search_oit		"Åbn søgning i nyt faneblad">
 <!ENTITY Ctr_osearch_meoit	"Mellemklik: søg i nyt 'forgrundsfaneblad'">
 <!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
 <!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
 <!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Tilføjelseslister: vis tilføjelsesversion">
-<!ENTITY Ctr_xpinstallui	"Gamle tilføjelser-installationsvindue (about:config-indstilling)">
+<!ENTITY Ctr_xpinstallui	"Gamle tilføjelser-installationsvindue">
 <!ENTITY Ctr_bmbutton		"Bogmærker-menuknap">
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
@@ -266,10 +266,10 @@
 <!ENTITY Ctr_lbsbsize		"Brugerdefineret brede for adresselinje og søgelinje">
 <!ENTITY Ctr_searchbar		"Søgelinje">
 <!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
-<!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature (about:config preference)">
+<!ENTITY Ctr_altautocompl	"Alternative appearance">
+<!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsugres		"Number of results">
 <!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Placering af menupunkter">
@@ -335,10 +335,10 @@
 <!ENTITY Ctr_tabthrobber	"Standard indlæsningsbillede">
 <!ENTITY Ctr_bmanimation	"Animation ved bogmærkning">
 <!ENTITY Ctr_pananimation	"Animation ved åbning af panel">
-<!ENTITY Ctr_tabanimation	"Animation ved lukning/åbning af faneblad (about:config-indstilling)">
-<!ENTITY Ctr_dlanimation	"Animation ved 'Filhentning notifikation' (about:config-indstilling)">
-<!ENTITY Ctr_fsanimation	"Fuldskærmsanimationer (about:config-indstilling)">
-<!ENTITY Ctr_fsaduration	"Fuldskærmsanimationer for HTML5-indhold (about:config-indstillinger)">
+<!ENTITY Ctr_tabanimation	"Animation ved lukning/åbning af faneblad">
+<!ENTITY Ctr_dlanimation	"Animation ved 'Filhentning notifikation'">
+<!ENTITY Ctr_fsanimation	"Fuldskærmsanimationer">
+<!ENTITY Ctr_fsaduration	"Fuldskærmsanimationer for HTML5-indhold">
 
 <!ENTITY Ctr_toolsitem		"Menupunkt i værktøjslinje">
 <!ENTITY Ctr_appmenuitem	"Menupunkt i programknappermenu">
