--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"Rejtarki nic górjejce (v2) --- stajśo [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 jo jano za někotare dodanki a dopołne drastwy!">
 <!ENTITY Ctr_tabsontopI1	"Pśidawa atribut [tabsontop=true/false] na">
-<!ENTITY Ctr_tabsintitlebar	"Titelowu rědku &brandShortName; město titeloweje rědki źěłowego systema wužywaś (about:config)">
+<!ENTITY Ctr_tabsintitlebar	"Titelowu rědku &brandShortName; město titeloweje rědki źěłowego systema wužywaś">
 <!ENTITY Ctr_tabwidthdef	"(standard)">
 <!ENTITY Ctr_tabwidthcla	"(klasiski)">
 <!ENTITY Ctr_tabminheight	"Wusokosć:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Gódnoty pód 48px zawinuju zwětšego zmólki w pśedstajenju!">
 <!ENTITY Ctr_square_edges	"Kwadratiske górne rožki">
 <!ENTITY Ctr_tttitlebar		"Rejtarkowy titel w titelowej rědce &brandShortName;">
-<!ENTITY Ctr_tabinsertion	"Pśiswójźbny rejtark za aktualnym rejtarkom zasunuś (about:config)">
+<!ENTITY Ctr_tabinsertion	"Pśiswójźbny rejtark za aktualnym rejtarkom zasunuś">
 <!ENTITY Ctr_emptytfavico	"Faworitowy symbol pokazaś (jolic sedło žeden njama)">
 <!ENTITY Ctr_emptytfavico_n	"Žeden">
 <!ENTITY Ctr_emptytfavico_g	"Powšykny">
@@ -70,11 +70,11 @@
 <!ENTITY Ctr_closei_def		"Standardne symbole">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rejtarku">
 <!ENTITY Ctr_closetabbig	"Wětšy symbol (20x20 px)">
-<!ENTITY Ctr_close_wwltab	"Wokno ze slědnym widobnym rejtarkom zacyniś (about:config)">
+<!ENTITY Ctr_close_wwltab	"Wokno ze slědnym widobnym rejtarkom zacyniś">
 
 <!ENTITY Ctr_hctpinfotab	"Někotare rejtarkowe warianty njejsu kompatibelne z rozšyrjenim 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Tłocašk na titelowej rědce njejo kompatibelny z rozšyrjenim 'Hide Caption Titlebar Plus'.">
-<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
+<!ENTITY Ctr_tobainfotab	"Dodank 'Tabs on Bottom' njejo kompatibelny z '&Ctr_title;' a by dejał se znjemóžniś. Wužywajśo k dispoziciji stojece nastajenja '&Ctr_cuitabsnontop;' město togo!">
 
 <!ENTITY Ctr_appbutton		"Tłocašk &brandShortName;">
 <!ENTITY Ctr_appbutton0		"Tłocašk znjemóžnjony">
@@ -127,10 +127,10 @@
 <!ENTITY Ctr_options_rem	"Kategoriju se spomnjeś, kótaraž jo se ako slědna wubrała">
 <!ENTITY Ctr_svgfilters		"SVG-barwy za symbole tłocaškow symbolowych rědkow">
 <!ENTITY Ctr_wincontrols	"Pśesuwajobne wóźeńske elementy połneje wobrazowki">
-<!ENTITY Ctr_puibuttonsep	"Menu button separator">
-<!ENTITY Ctr_puibut_no_sep	"Hidden">
-<!ENTITY Ctr_puibut_l_sep	"Left">
-<!ENTITY Ctr_puibut_r_sep	"Right">
+<!ENTITY Ctr_puibuttonsep	"Źěleńska smužka menijowego tłocaška">
+<!ENTITY Ctr_puibut_no_sep	"Schowana">
+<!ENTITY Ctr_puibut_l_sep	"Nalěwo">
+<!ENTITY Ctr_puibut_r_sep	"Napšawo">
 <!ENTITY Ctr_html5warning	"Warnowanje połneje wobrazowki HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Wobraze 'nejwušeje domeny': Klasiski wenkowny naglěd">
 <!ENTITY Ctr_altalertbox	"'Warnowański kašćik': Alternatiwny wenkowny naglěd">
@@ -138,7 +138,7 @@
 <!ENTITY Ctr_mstatusbar		"Pśesuwajobny wobcerk statusoweje rědki">
 <!ENTITY Ctr_mstatusbars4e	"Wobcerk statusoweje rědki kontrolěrujo se pśez 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Wobcerk statusoweje rědki kontrolěrujo se pśez 'ThePuzzlePiece'">
-<!ENTITY Ctr_mstatusbarpzt	"Wobcerk statusoweje rědki kontrolěrujo se pśez 'Puzzle Bars'">
+<!ENTITY Ctr_mstatusbarpzt	"Wobcerk statusoweje rědki kontrolěrujo se pśez 'Puzzle Toolbars'">
 <!ENTITY Ctr_mstatusbarabr	"Wobcerk statusoweje rědki kontrolěrujo se pśez 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Tłocaška Stoj a Znowego kombiněrowaś">
 <!ENTITY Ctr_stoprel1		"Wažny: Tłocašk Znowego za tłocaškom Stoj placěrowaś!">
@@ -166,11 +166,11 @@
 <!ENTITY Ctr_search_ui		"Pytanje">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
 <!ENTITY Ctr_ctroldsearchc	"Pó pytanju pytańske pólo wuprozniś">
-<!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
-<!ENTITY Ctr_search_oit		"Pytanje w nowem rejtarku wócyniś (nastajenje about:config)">
+<!ENTITY Ctr_ctroldsearchr	"Pó pytanju so k prědnej pytnicy w lisćinje wrośiś">
+<!ENTITY Ctr_search_oit		"Pytanje w nowem rejtarku wócyniś">
 <!ENTITY Ctr_osearch_meoit	"Srjejźne kliknjenja: Pytanje w nowem 'prědkowem rejtarku'">
 <!ENTITY Ctr_osearch_iwidth	"Šyrokosć wuskokujucego wokna awtomatiski pśiměriś">
-<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
+<!ENTITY Ctr_osearch_cwidth	"Swójska šyrokosć za wuskokujuce wokna">
 <!ENTITY Ctr_osearch_dm		"Mały wuběrański tłocašk">
 <!ENTITY Ctr_addonmanager	"Zastojnik dodankow">
 <!ENTITY Ctr_alt_addonsp	"'Bok Dalšne info': Alternatiwny pórěd">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_am_buticons	"Lisćiny dodankow: Popise tłocaškow pśez symbole wuměniś">
 <!ENTITY Ctr_am_hovshowb	"Lisćiny dodankow: Tłocaški jano pśi 'hover' pokazaś">
 <!ENTITY Ctr_addonversion	"Lisćiny dodankow: Wersiju dodanka pokazaś">
-<!ENTITY Ctr_xpinstallui	"Stare dodankowe instalěrowańske wokno (nastajenje about:config)">
+<!ENTITY Ctr_xpinstallui	"Stare dodankowe instalěrowańske wokno">
 <!ENTITY Ctr_bmbutton		"Tłocašk menija cytańskich znamjenjow">
 <!ENTITY Ctr_hiderecentbm	"Wuskokujuce wokno cytańskich znamjenjow: Njedawno pśidany cytańske znamjenja schowaś">
 <!ENTITY Ctr_hideeditbm		"Gwězdku cytańskich znamjenjow: Wuskokujuce wokno schowaś (jolic bok njejo ako cytańske znamje skłaźony)">
@@ -266,10 +266,10 @@
 <!ENTITY Ctr_lbsbsize		"Swójska šyrokosć za adresowe pólo a pytańske pólo">
 <!ENTITY Ctr_searchbar		"Pytańske pólo">
 <!ENTITY Ctr_autocomplete	"Wuskokujuce wokno awtowudopołnjenja">
-<!ENTITY Ctr_altautocompl	"Alternatiwny naglěd (eksperimentelny)">
-<!ENTITY Ctr_urlbar_uc		"Funkciju 'zjadnośone awotwudopołnjenje' znjemóžniś (nastajenje about:config)">
+<!ENTITY Ctr_altautocompl	"Alternatiwny naglěd">
+<!ENTITY Ctr_urlbar_uc		"Funkciju 'zjadnośone awotwudopołnjenje' znjemóžniś">
 <!ENTITY Ctr_lbsugresi		"Limit wusokosći znjemóžniś">
-<!ENTITY Ctr_lbsugres		"Licba wuslědkow (nastajenje about:config)">
+<!ENTITY Ctr_lbsugres		"Licba wuslědkow">
 <!ENTITY Ctr_lbsbradius		"Swójski ramikowy wokłon za adresowe pólo a pytańske polo">
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Pśidatne symbolowe rědki">
@@ -305,7 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Slězynowu barwu/młu wótpóraś (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"Barwy 'Blue Aero' za głowne rědki a rejtarki">
-<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
+<!ENTITY Ctr_aerocolorsg	"Barwy 'Grey-blue Aero">
 <!ENTITY Ctr_transpttbw10	"Titelowa/menijowa/rejtarkowa rědka: Slězynowu barwu wótpóraś">
 <!ENTITY Ctr_transpttbew10	"Pśidatne pólěpšenja za někotare drastwy źěłowego systema">
 <!ENTITY Ctr_transptcw10	"Standardne tłocaški Miniměrowaś/Maksiměrowaś/Zacyniś schowaś">
@@ -334,10 +334,10 @@
 <!ENTITY Ctr_tabthrobber	"Standardny zacytowański wobraz">
 <!ENTITY Ctr_bmanimation	"Animacija za 'Cytańske znamje pśidaś">
 <!ENTITY Ctr_pananimation	"Animacija za wócynjanje póla">
-<!ENTITY Ctr_tabanimation	"Animacija za zacynjanje/wócynjanje rejtarka (nastajenje about:config)">
-<!ENTITY Ctr_dlanimation	"Animacija za 'ześěgnjeńske zdźělenje' (nastajenje about:config)">
-<!ENTITY Ctr_fsanimation	"Animacije na połnej wobrazowce (nastajenje about:config)">
-<!ENTITY Ctr_fsaduration	"Animacije na połnej wobrazowce za wopśimjeśe HTML5 (nastajenja about:config)">
+<!ENTITY Ctr_tabanimation	"Animacija za zacynjanje/wócynjanje rejtarka">
+<!ENTITY Ctr_dlanimation	"Animacija za 'ześěgnjeńske zdźělenje'">
+<!ENTITY Ctr_fsanimation	"Animacije na połnej wobrazowce">
+<!ENTITY Ctr_fsaduration	"Animacije na połnej wobrazowce za wopśimjeśe HTML5">
 
 <!ENTITY Ctr_toolsitem		"Menijowy zapisk w meniju Rědy">
 <!ENTITY Ctr_appmenuitem	"Menijowy zapisk w meniju nałožeńskich tłocaškow">
