--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"Kaardid pole kõige peal (v2) --- atribuut [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 on ainult mõnede lisade ja täielike välimuste jaoks!">
 <!ENTITY Ctr_tabsontopI1	"Atribuut [tabsontop=true/false] lisatakse nendele:">
-<!ENTITY Ctr_tabsintitlebar	"Opsüsteemi tiitliriba asemel kasuta &brandShortName;i tiitliriba (about:config eelistus)">
+<!ENTITY Ctr_tabsintitlebar	"Opsüsteemi tiitliriba asemel kasuta &brandShortName;i tiitliriba">
 <!ENTITY Ctr_tabwidthdef	"(vaikimisi)">
 <!ENTITY Ctr_tabwidthcla	"(klassikaline)">
 <!ENTITY Ctr_tabminheight	"Kõrgus:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Väiksemad väärtused kui 48px põhjustavad enamusel juhtudel vigu!">
 <!ENTITY Ctr_square_edges	"Kandilised ülemised nurgad">
 <!ENTITY Ctr_tttitlebar		"Kaardi pealkiri &brandShortName;i tiitliribal">
-<!ENTITY Ctr_tabinsertion	"Pane seotud kaardid praeguse järele (about:config eelistus)">
+<!ENTITY Ctr_tabinsertion	"Pane seotud kaardid praeguse järele">
 <!ENTITY Ctr_emptytfavico	"Näita lehe ikooni (kui sait seda ei paku)">
 <!ENTITY Ctr_emptytfavico_n	"Pole">
 <!ENTITY Ctr_emptytfavico_g	"Üldine">
@@ -70,7 +70,7 @@
 <!ENTITY Ctr_closei_def		"Vaikimisi ikoonid">
 <!ENTITY Ctr_closeonleft	"Alternatiivne asukoht kaardil">
 <!ENTITY Ctr_closetabbig	"Suurem ikoon (20x20 px)">
-<!ENTITY Ctr_close_wwltab	"Viimase nähtava kaardi sulgemisel sulge kogu aken (about:config eelistus)">
+<!ENTITY Ctr_close_wwltab	"Viimase nähtava kaardi sulgemisel sulge kogu aken">
 
 <!ENTITY Ctr_hctpinfotab	"Mõned kaardi variatsioonid ei ühildu lisaga 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Nupp tiitliribal ei ühildu lisaga 'Hide Caption Titlebar Plus'.">
@@ -167,7 +167,7 @@
 <!ENTITY Ctr_ctroldsearch	"Vana otsing">
 <!ENTITY Ctr_ctroldsearchc	"Pärast otsingu teostamist tühjenda otsingukast">
 <!ENTITY Ctr_ctroldsearchr	"Pärast otsingu teostamist taasta vaikimisi otsingumootor">
-<!ENTITY Ctr_search_oit		"Ava otsingutulemuste leht uuel kaardil (about:config eelistus)">
+<!ENTITY Ctr_search_oit		"Ava otsingutulemuste leht uuel kaardil">
 <!ENTITY Ctr_osearch_meoit	"Hiire keskmise nupuga klõpsamine: otsi uuel esiplaanil oleval kaardil">
 <!ENTITY Ctr_osearch_iwidth	"Automaatselt kohanda hüpiku laiust">
 <!ENTITY Ctr_osearch_cwidth	"Otsingu hüpikute kohandatud laius">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_am_buticons	"Laienduste loendid: asenda nuppude tekst ikoonidega">
 <!ENTITY Ctr_am_hovshowb	"Laienduste loendid: näita nuppe ainult hiirega peale minnes">
 <!ENTITY Ctr_addonversion	"Laienduste loendid: näita lisade versiooni">
-<!ENTITY Ctr_xpinstallui	"Vana lisade paigaldamise aken (about:config eelistus)">
+<!ENTITY Ctr_xpinstallui	"Vana lisade paigaldamise aken">
 <!ENTITY Ctr_bmbutton		"Järjehoidjate menüü nupp">
 <!ENTITY Ctr_hiderecentbm	"Järjehoidjate hüpik: Peida viimati lisatud järjehoidjad">
 <!ENTITY Ctr_hideeditbm		"Järjehoidjate täht: peida hüpik (kui leht pole järjehoidjates)">
@@ -266,10 +266,10 @@
 <!ENTITY Ctr_lbsbsize		"Aadressiriba ja otsinguriba kohandatud laius">
 <!ENTITY Ctr_searchbar		"Otsinguriba">
 <!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
-<!ENTITY Ctr_altautocompl	"Alternatiivne välimus (katsejärgus)">
-<!ENTITY Ctr_urlbar_uc		"Keela ühtse automaatlõpetamise funktsioon 'unified autocomplete' (about:config eelistus)">
+<!ENTITY Ctr_altautocompl	"Alternatiivne välimus">
+<!ENTITY Ctr_urlbar_uc		"Keela ühtse automaatlõpetamise funktsioon 'unified autocomplete'">
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
-<!ENTITY Ctr_lbsugres		"Tulemuste arv (about:config eelistus)">
+<!ENTITY Ctr_lbsugres		"Tulemuste arv">
 <!ENTITY Ctr_lbsbradius		"Aadressiriba ja otsinguriba piirjoonte kohandatud ümarus">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
@@ -335,10 +335,10 @@
 <!ENTITY Ctr_tabthrobber	"Vaikimisi laadimise kujutis">
 <!ENTITY Ctr_bmanimation	"Järjehoidjatega töötamise animatsioon">
 <!ENTITY Ctr_pananimation	"Paneeli avamise animatsioon">
-<!ENTITY Ctr_tabanimation	"Kaardi sulgemise/avamise animatsioon (about:config eelistus)">
-<!ENTITY Ctr_dlanimation	"'Allalaadimise teavituse' animatsioon (about:config eelistus)">
-<!ENTITY Ctr_fsanimation	"Täisekraani animatsioonid (about:config eelistus)">
-<!ENTITY Ctr_fsaduration	"HTML5-sisu animatsioonid täisekraani režiimis (about:config eelistus)">
+<!ENTITY Ctr_tabanimation	"Kaardi sulgemise/avamise animatsioon">
+<!ENTITY Ctr_dlanimation	"'Allalaadimise teavituse' animatsioon">
+<!ENTITY Ctr_fsanimation	"Täisekraani animatsioonid">
+<!ENTITY Ctr_fsaduration	"HTML5-sisu animatsioonid täisekraani režiimis">
 
 <!ENTITY Ctr_toolsitem		"Menüükirje tööriistade menüüs">
 <!ENTITY Ctr_appmenuitem	"Menüükirje &brandShortName;i nupu menüüs">
