--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"Rajtarki nic horjeka (v2) --- stajće [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 je jenož za někotre přidatki a dospołne drasty!">
 <!ENTITY Ctr_tabsontopI1	"Přidawa atribut [tabsontop=true/false] na">
-<!ENTITY Ctr_tabsintitlebar	"Titulnu lajstu &brandShortName; město titulneje lajsty dźěłoweho systema wužiwać (nastajenje about:config)">
+<!ENTITY Ctr_tabsintitlebar	"Titulnu lajstu &brandShortName; město titulneje lajsty dźěłoweho systema wužiwać">
 <!ENTITY Ctr_tabwidthdef	"(standard)">
 <!ENTITY Ctr_tabwidthcla	"(klasiski)">
 <!ENTITY Ctr_tabminheight	"Wysokosć:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Hódnoty pod 48px w najwjace padach zwobraznjenske zmylki zawinuja!">
 <!ENTITY Ctr_square_edges	"Kwadratiske hornje róžki">
 <!ENTITY Ctr_tttitlebar		"Rajtarkowy titul w titulne lajsće &brandShortName;">
-<!ENTITY Ctr_tabinsertion	"Přiwuzny rajtark za aktualnym rajtarkom zasadźić (about:config)">
+<!ENTITY Ctr_tabinsertion	"Přiwuzny rajtark za aktualnym rajtarkom zasadźić">
 <!ENTITY Ctr_emptytfavico	"Faworitowy symbol pokazać (jeli sydło žadyn njepodawa)">
 <!ENTITY Ctr_emptytfavico_n	"Žadyn">
 <!ENTITY Ctr_emptytfavico_g	"Powšitkowny">
@@ -70,11 +70,11 @@
 <!ENTITY Ctr_closei_def		"Standardne symbole">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rajtarku">
 <!ENTITY Ctr_closetabbig	"Wjetši symbol (20x20 px)">
-<!ENTITY Ctr_close_wwltab	"Wokno z poslednim widźomnym rajtarkom začinić (about:config)">
+<!ENTITY Ctr_close_wwltab	"Wokno z poslednim widźomnym rajtarkom začinić">
 
 <!ENTITY Ctr_hctpinfotab	"Někotre rajtarkowe warianty z rozšěrjenjom 'Hide Caption Titlebar Plus' kompatibelne njejsu.">
 <!ENTITY Ctr_hctpinfoab		"Tłóčatko na titulnej lajsće z rozšěrjenjom 'Hide Caption Titlebar Plus' kompatibelne njeje.">
-<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
+<!ENTITY Ctr_tobainfotab	"Přidatk 'Tabs on Bottom' njeje kompatibelny z '&Ctr_title;' a měł so znjemóžnić. Wužiwajće k dispoziciji stejace nastajenja '&Ctr_cuitabsnontop;' město toho!">
 
 <!ENTITY Ctr_appbutton		"Tłóčatko &brandShortName;">
 <!ENTITY Ctr_appbutton0		"Tłóčatko znjemóžnjeny">
@@ -127,18 +127,18 @@
 <!ENTITY Ctr_options_rem	"Kategoriju sej spomjatkować, kotraž je so jako poslednja wubrała">
 <!ENTITY Ctr_svgfilters		"SVG-barby za symbole standardnych tłóčatkow">
 <!ENTITY Ctr_wincontrols	"Přesuwajomne wodźenske elementy połneje wobrazowki">
-<!ENTITY Ctr_puibuttonsep	"Menu button separator">
-<!ENTITY Ctr_puibut_no_sep	"Hidden">
-<!ENTITY Ctr_puibut_l_sep	"Left">
-<!ENTITY Ctr_puibut_r_sep	"Right">
+<!ENTITY Ctr_puibuttonsep	"Dźělatko menijoweho tłóčatka">
+<!ENTITY Ctr_puibut_no_sep	"Schowane">
+<!ENTITY Ctr_puibut_l_sep	"Nalěwo">
+<!ENTITY Ctr_puibut_r_sep	"Naprawo">
 <!ENTITY Ctr_html5warning	"Warnowanje połneje wobrazowki HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Wobrazy 'najwyšeje domeny': Klasiski zwonkowny napohlad">
 <!ENTITY Ctr_altalertbox	"'Warnowanski kašćik': Alternatiwny zwonkowny napohlad">
 <!ENTITY Ctr_emptygfavico	"Powšitkowny faworitowy symbol wuměnić">
 <!ENTITY Ctr_mstatusbar		"Přesuwajomny wobłuk statusoweje lajsty">
-<!ENTITY Ctr_mstatusbars4e	"Statusowy wobłuk seo přez 'Status-4-Evar' kontroluje">
+<!ENTITY Ctr_mstatusbars4e	"Statusowy wobłuk so přez 'Status-4-Evar' kontroluje">
 <!ENTITY Ctr_mstatusbartpp	"Statusowy wobłuk so přez 'ThePuzzlePiece' kontroluje">
-<!ENTITY Ctr_mstatusbarpzt	"Statusowy wobłuk so přez 'Puzzle Bars' kontroluje">
+<!ENTITY Ctr_mstatusbarpzt	"Statusowy wobłuk so přez 'Puzzle Toolbars' kontroluje">
 <!ENTITY Ctr_mstatusbarabr	"Statusowy wobłuk so přez 'The Addon Bar (Restored)' komtroluje">
 <!ENTITY Ctr_combrelstop	"Tłóčatce Stój a Znowa kombinować">
 <!ENTITY Ctr_stoprel1		"Wažny: Tłóčatko Znowa za tłóčatkom Stój zaměstnić!">
@@ -166,11 +166,11 @@
 <!ENTITY Ctr_search_ui		"Pytanje">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
 <!ENTITY Ctr_ctroldsearchc	"Po pytanju pytanske polo wuprózdnić">
-<!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
-<!ENTITY Ctr_search_oit		"Pytanje w nowym rajtarku wočinić (nastajenje about:config)">
+<!ENTITY Ctr_ctroldsearchr	"Po pytanju so k prěnjej pytawje w lisćinje wróćić">
+<!ENTITY Ctr_search_oit		"Pytanje w nowym rajtarku wočinić">
 <!ENTITY Ctr_osearch_meoit	"Srjedźne kliknjenja: W nowym 'prědkowym rajtarku' pytać">
 <!ENTITY Ctr_osearch_iwidth	"Šěrokosć wuskakowaceho wokna přiměrić">
-<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
+<!ENTITY Ctr_osearch_cwidth	"Swójska šěrokosć za pytanske wuskakowace wokna">
 <!ENTITY Ctr_osearch_dm		"Małe wuběranske tłóčatko">
 <!ENTITY Ctr_addonmanager	"Zrjadowak přidatkow">
 <!ENTITY Ctr_alt_addonsp	"Strona 'wjace info': Alternatiwny porjad">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_am_buticons	"Lisćiny přidatkow: Popisy tłóčatko přez symbole wuměnić">
 <!ENTITY Ctr_am_hovshowb	"Lisćiny přidatkow: Tłóčatka jenož při 'hover' pokazać">
 <!ENTITY Ctr_addonversion	"Lisćiny přidatkow: Wersiju přidatka pokazać">
-<!ENTITY Ctr_xpinstallui	"Stare přidatkowe instalowanske wokno (nastajenje about:config)">
+<!ENTITY Ctr_xpinstallui	"Stare přidatkowe instalowanske wokno">
 <!ENTITY Ctr_bmbutton		"Tłóčatko menija zapołožkow">
 <!ENTITY Ctr_hiderecentbm	"Wuskakowace wokno zapołožkow: Njedawo přidate zapołožki schować">
 <!ENTITY Ctr_hideeditbm		"Hwěžka zapołožkow: Wuskakowace wokno schować (jeli strona jako zapołožka składowana njeje)">
@@ -266,10 +266,10 @@
 <!ENTITY Ctr_lbsbsize		"Swójska šěrokosć za adresowe polo a pytanske polo">
 <!ENTITY Ctr_searchbar		"Pytanske polo">
 <!ENTITY Ctr_autocomplete	"Wuskakowace wokno awtowudospołnjenja">
-<!ENTITY Ctr_altautocompl	"Alternatiwny napohlad (eksperimentelny)">
-<!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić (nastajenje about:config)">
+<!ENTITY Ctr_altautocompl	"Alternatiwny napohlad">
+<!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić">
 <!ENTITY Ctr_lbsugresi		"Limit wysokosće znjemóžnić">
-<!ENTITY Ctr_lbsugres		"Ličba wuslědkow (nastajenje about:config)">
+<!ENTITY Ctr_lbsugres		"Ličba wuslědkow">
 <!ENTITY Ctr_lbsbradius		"Swójska ramikowa křiwizna za adresowe polo a pytanske polo">
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Přidatne symbolowe lajsty">
@@ -305,7 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Pozadkowu barbu/młu wotstronić (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"Barby 'Blue Aero' za hłowne lajsty a rajtarki">
-<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
+<!ENTITY Ctr_aerocolorsg	"Barby 'Grey-blue Aero'">
 <!ENTITY Ctr_transpttbw10	"Titulna/menijowa/rajtarkowa lajsta: Pozadkowu barbu wotstronić">
 <!ENTITY Ctr_transpttbew10	"Přidatne polěpšenja za někotre drasty dźěłoweho systema">
 <!ENTITY Ctr_transptcw10	"Standardne tłóčatka Miniměrować/Maksiměrować/Začinić schować">
@@ -334,10 +334,10 @@
 <!ENTITY Ctr_tabthrobber	"Standardny začitowanski wobraz">
 <!ENTITY Ctr_bmanimation	"Animacija za 'Zapołožku přidać'">
 <!ENTITY Ctr_pananimation	"Animacija za wočinjenje pola">
-<!ENTITY Ctr_tabanimation	"Animacija za začinjenje/wočinjenje rajtarka (nastajenje about:config)">
-<!ENTITY Ctr_dlanimation	"Animacija za 'sćehnjenske zdźělenje' (nastajenje about:config)">
-<!ENTITY Ctr_fsanimation	"Animacije na połnej wobrazowce (nastajenje about:config)">
-<!ENTITY Ctr_fsaduration	"Animacije na połnej wobrazowce za wobsah HTML5 (nastajenja about:config)">
+<!ENTITY Ctr_tabanimation	"Animacija za začinjenje/wočinjenje rajtarka">
+<!ENTITY Ctr_dlanimation	"Animacija za 'sćehnjenske zdźělenje'">
+<!ENTITY Ctr_fsanimation	"Animacije na połnej wobrazowce">
+<!ENTITY Ctr_fsaduration	"Animacije na połnej wobrazowce za wobsah HTML5">
 
 <!ENTITY Ctr_toolsitem		"Menijowy zapisk w meniju Nastroje">
 <!ENTITY Ctr_appmenuitem	"Menijowy zapisk w meniju nałoženskich tłóčatkow">
