--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"Schede in basso (v2) --- attivata [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"La versione v2 è solo per alcuni componenti aggiuntivi e temi completi!">
 <!ENTITY Ctr_tabsontopI1	"Aggiunge l’attributo [tabsontop=true/false] a">
-<!ENTITY Ctr_tabsintitlebar	"Schede nella barra del titolo (about:config)">
+<!ENTITY Ctr_tabsintitlebar	"Schede nella barra del titolo">
 <!ENTITY Ctr_tabwidthdef	"(predefinita)">
 <!ENTITY Ctr_tabwidthcla	"(stile classico)">
 <!ENTITY Ctr_tabminheight	"Altezza:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Valori inferiori a 48px provocheranno anomalie nella maggior parte dei casi!">
 <!ENTITY Ctr_square_edges	"Angoli superiori spigolosi">
 <!ENTITY Ctr_tttitlebar		"Titolo scheda nella barra del titolo di &brandShortName;">
-<!ENTITY Ctr_tabinsertion	"Inserisci la scheda relativa dopo la scheda corrente (about:config)">
+<!ENTITY Ctr_tabinsertion	"Inserisci la scheda relativa dopo la scheda corrente">
 <!ENTITY Ctr_emptytfavico	"Mostra favicon (quando un sito ne è privo)">
 <!ENTITY Ctr_emptytfavico_n	"Nessuna">
 <!ENTITY Ctr_emptytfavico_g	"Generica">
@@ -70,7 +70,7 @@
 <!ENTITY Ctr_closei_def		"Icone predefinite">
 <!ENTITY Ctr_closeonleft	"Posizione alternativa sulla scheda">
 <!ENTITY Ctr_closetabbig	"Icona più grande (20x20 px)">
-<!ENTITY Ctr_close_wwltab	"Chiudendo l’ultima scheda chiudi la finestra (about:config)">
+<!ENTITY Ctr_close_wwltab	"Chiudendo l’ultima scheda chiudi la finestra">
 
 <!ENTITY Ctr_hctpinfotab	"Alcune modifiche alle schede non sono compatibili con il componente aggiuntivo 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Il pulsante nella barra del titolo non è compatibile con il componente aggiuntivo 'Hide Caption Titlebar Plus'.">
@@ -167,7 +167,7 @@
 <!ENTITY Ctr_ctroldsearch	"Ricerca vecchio stile">
 <!ENTITY Ctr_ctroldsearchc	"Pulisci la casella di ricerca dopo aver effettuato la ricerca">
 <!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
-<!ENTITY Ctr_search_oit		"Apri la ricerca in una nuova scheda (preferenza in  about:config)">
+<!ENTITY Ctr_search_oit		"Apri la ricerca in una nuova scheda">
 <!ENTITY Ctr_osearch_meoit	"Clic sul tasto centrale: ricerca in una nuova scheda attiva">
 <!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
 <!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_am_buticons	"Elenco dei componenti: sostituisci il testo dei pulsanti con le icone">
 <!ENTITY Ctr_am_hovshowb	"Elenco dei componenti: mostra i pulsanti soltanto al passaggio del mouse">
 <!ENTITY Ctr_addonversion	"Informazioni sui componenti: mostra versione del componente aggiuntivo">
-<!ENTITY Ctr_xpinstallui	"Stile classico per la finestra di installazione dei componenti aggiuntivi (preferenza in about:config)">
+<!ENTITY Ctr_xpinstallui	"Stile classico per la finestra di installazione dei componenti aggiuntivi">
 <!ENTITY Ctr_bmbutton		"Menu del pulsante segnalibri">
 <!ENTITY Ctr_hiderecentbm	"Popup segnalibri: nascondi i segnalibri aggiunti di recente">
 <!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
@@ -266,10 +266,10 @@
 <!ENTITY Ctr_lbsbsize		"Larghezza personalizzata per la barra degli indirizzi e di ricerca">
 <!ENTITY Ctr_searchbar		"Barra di ricerca">
 <!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
-<!ENTITY Ctr_urlbar_uc		"Disattiva il completamento automatico (preferenza in about:config)">
+<!ENTITY Ctr_altautocompl	"Alternative appearance">
+<!ENTITY Ctr_urlbar_uc		"Disattiva il completamento automatico">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsugres		"Number of results">
 <!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Posizione delle voci del menu">
@@ -335,10 +335,10 @@
 <!ENTITY Ctr_tabthrobber	"Immagine di caricamento predefinita">
 <!ENTITY Ctr_bmanimation	"Icona animata all’aggiunta di un segnalibro">
 <!ENTITY Ctr_pananimation	"Icona animata all’apertura di un pannello">
-<!ENTITY Ctr_tabanimation	"Icona animata all’apertura o alla chiusura di una scheda (about:config)">
-<!ENTITY Ctr_dlanimation	"Icona animata avviso download (about:config)">
-<!ENTITY Ctr_fsanimation	"Icona animata all’attivazione della modalità 'A tutto schermo' (about:config)">
-<!ENTITY Ctr_fsaduration	"Icona animata per la modalità 'A tutto schermo' degli elementi HTML5 (about:config)">
+<!ENTITY Ctr_tabanimation	"Icona animata all’apertura o alla chiusura di una scheda">
+<!ENTITY Ctr_dlanimation	"Icona animata avviso download">
+<!ENTITY Ctr_fsanimation	"Icona animata all’attivazione della modalità 'A tutto schermo'">
+<!ENTITY Ctr_fsaduration	"Icona animata per la modalità 'A tutto schermo' degli elementi HTML5">
 
 <!ENTITY Ctr_toolsitem		"Aggiungi collegamento nel menu Strumenti">
 <!ENTITY Ctr_appmenuitem	"Aggiungi collegamento nel menu del Pulsante &brandShortName;">
