--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"Abas Embaixo (v2) --- Definida [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 é Só para Alguns Complementos e Temas Completos!">
 <!ENTITY Ctr_tabsontopI1	"Adicionar Atributos [tabsontop=true/false] para">
-<!ENTITY Ctr_tabsintitlebar	"Barra de Título do &brandShortName; (about:config)">
+<!ENTITY Ctr_tabsintitlebar	"Barra de Título do &brandShortName;">
 <!ENTITY Ctr_tabwidthdef	"(Padrão)">
 <!ENTITY Ctr_tabwidthcla	"(Clássica)">
 <!ENTITY Ctr_tabminheight	"Altura:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Valores Abaixo de 48px Causarão Falhas na Maioria dos Casos!">
 <!ENTITY Ctr_square_edges	"Squared top corners">
 <!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
-<!ENTITY Ctr_tabinsertion	"Inserir a Aba Relacionada Depois da Aba Atual (about:config)">
+<!ENTITY Ctr_tabinsertion	"Inserir a Aba Relacionada Depois da Aba Atual">
 <!ENTITY Ctr_emptytfavico	"Show favicon (if a site does not offer one)">
 <!ENTITY Ctr_emptytfavico_n	"None">
 <!ENTITY Ctr_emptytfavico_g	"Generic">
@@ -70,7 +70,7 @@
 <!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Posição Alternativa na Aba">
 <!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
-<!ENTITY Ctr_close_wwltab	"Fechar a Janela com a Última Aba Visível (about:config)">
+<!ENTITY Ctr_close_wwltab	"Fechar a Janela com a Última Aba Visível">
 
 <!ENTITY Ctr_hctpinfotab	"Some tab variations are not compatible to 'Hide Caption Titlebar Plus' add-on.">
 <!ENTITY Ctr_hctpinfoab		"Button on titlebar is not compatible to 'Hide Caption Titlebar Plus' add-on.">
@@ -167,7 +167,7 @@
 <!ENTITY Ctr_ctroldsearch	"Old search">
 <!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
 <!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
-<!ENTITY Ctr_search_oit		"Open search in new tab (about:config preference)">
+<!ENTITY Ctr_search_oit		"Open search in new tab">
 <!ENTITY Ctr_osearch_meoit	"Middle-clicks: search in new 'foreground tab'">
 <!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
 <!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
 <!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Add-on lists: show add-on version">
-<!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
+<!ENTITY Ctr_xpinstallui	"Old add-on install window">
 <!ENTITY Ctr_bmbutton		"Bookmarks menu button">
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
@@ -266,10 +266,10 @@
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
 <!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
-<!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature (about:config preference)">
+<!ENTITY Ctr_altautocompl	"Alternative appearance">
+<!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsugres		"Number of results">
 <!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Posição dos Ítens do Menu">
@@ -335,10 +335,10 @@
 <!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Usar Animação ao Usar os Favoritos">
 <!ENTITY Ctr_pananimation	"Usar Animação ao Abrir o Painel">
-<!ENTITY Ctr_tabanimation	"Usar Animação ao Fechar/Abrir a Aba (about:config)">
-<!ENTITY Ctr_dlanimation	"Usar Animação ao 'Notificar Download' (about:config)">
-<!ENTITY Ctr_fsanimation	"Fullscreen animations (about:config preference)">
-<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content (about:config preferences)">
+<!ENTITY Ctr_tabanimation	"Usar Animação ao Fechar/Abrir a Aba">
+<!ENTITY Ctr_dlanimation	"Usar Animação ao 'Notificar Download'">
+<!ENTITY Ctr_fsanimation	"Fullscreen animations">
+<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content">
 
 <!ENTITY Ctr_toolsitem		"Item do Menu no Menu Ferramentas">
 <!ENTITY Ctr_appmenuitem	"Item do Menu no Menu Botões do Aplicativo">
