--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"Zavihki niso na vrhu (v2) --- atribut [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 je za nekatere dodatke in samo za celotne teme!">
 <!ENTITY Ctr_tabsontopI1	"Atribut [tabsontop=true/false] je dodan k">
-<!ENTITY Ctr_tabsintitlebar	"Nazivna vrstica &brandShortName;a (možnost about:config)">
+<!ENTITY Ctr_tabsintitlebar	"Nazivna vrstica &brandShortName;a">
 <!ENTITY Ctr_tabwidthdef	"(privzeto)">
 <!ENTITY Ctr_tabwidthcla	"(klasično)">
 <!ENTITY Ctr_tabminheight	"Višina:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Vrednosti pod 48 sl. točk bodo v večini premerov povzročile napake!">
 <!ENTITY Ctr_square_edges	"Kvadratasti zgornji koti">
 <!ENTITY Ctr_tttitlebar		"Naziv zavihka v nazivni vrstici &brandShortName;a">
-<!ENTITY Ctr_tabinsertion	"Vstavi odprt zavihek poleg trenutnega (možnost about:config)">
+<!ENTITY Ctr_tabinsertion	"Vstavi odprt zavihek poleg trenutnega">
 <!ENTITY Ctr_emptytfavico	"Prikaži zaznamko (če je stran ne dobavi)">
 <!ENTITY Ctr_emptytfavico_n	"Brez">
 <!ENTITY Ctr_emptytfavico_g	"Splošno">
@@ -70,7 +70,7 @@
 <!ENTITY Ctr_closei_def		"Privzete ikone">
 <!ENTITY Ctr_closeonleft	"Nadomestni položaj na zavihku">
 <!ENTITY Ctr_closetabbig	"Večja ikona (20 x 20 sl. točk)">
-<!ENTITY Ctr_close_wwltab	"Zapri okno z nazadje vidnim zavihkom (možnost about:config)">
+<!ENTITY Ctr_close_wwltab	"Zapri okno z nazadje vidnim zavihkom">
 
 <!ENTITY Ctr_hctpinfotab	"Nekatere različice niso združljive z dodatkom 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Gumb na nazivni vrstici ni združljiv z dodatkom 'Hide Caption Titlebar Plus'.">
@@ -167,7 +167,7 @@
 <!ENTITY Ctr_ctroldsearch	"Staro iskanje">
 <!ENTITY Ctr_ctroldsearchc	"Počisti iskalno polje po iskanju">
 <!ENTITY Ctr_ctroldsearchr	"Po iskanju povrni iskalnik na prvega s seznama">
-<!ENTITY Ctr_search_oit		"Odpri iskanje v novem zavihku (možnost about:config)">
+<!ENTITY Ctr_search_oit		"Odpri iskanje v novem zavihku">
 <!ENTITY Ctr_osearch_meoit	"Srednji kliki: išči v novem 'zavihku v ospredju'">
 <!ENTITY Ctr_osearch_iwidth	"Samodejno prilagodi širino pojavnega okna">
 <!ENTITY Ctr_osearch_cwidth	"Širina po meri pojavnih oken za iskanje">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_am_buticons	"Seznami dodatkov: nadomesti oznake gumbov z ikonami">
 <!ENTITY Ctr_am_hovshowb	"Seznami dodatkov: gumbe prikaži samo ob 'prehodu z miško'">
 <!ENTITY Ctr_addonversion	"Stran dodatkov: prikaži različico dodatka">
-<!ENTITY Ctr_xpinstallui	"Staro okno za namestitev dodatkov (možnost about:config)">
+<!ENTITY Ctr_xpinstallui	"Staro okno za namestitev dodatkov">
 <!ENTITY Ctr_bmbutton		"Gumb menija zaznamkov">
 <!ENTITY Ctr_hiderecentbm	"Pojavno okno zaznamkov: skrij nedavno dodane zaznamke">
 <!ENTITY Ctr_hideeditbm		"Zvezdica za zaznamke: skrij pojavno okno (če stran ni dodana med zaznamke)">
@@ -266,10 +266,10 @@
 <!ENTITY Ctr_lbsbsize		"Prilagodljiva širina naslovne in iskalne vrstice">
 <!ENTITY Ctr_searchbar		"Iskalna vrstica">
 <!ENTITY Ctr_autocomplete	"Pojavno okno samodokončevanja">
-<!ENTITY Ctr_altautocompl	"Nadomestni videz (preskusno)">
-<!ENTITY Ctr_urlbar_uc		"Onemogoči značilnost 'poenotenega samodokončevanja' (možnost about:config)">
+<!ENTITY Ctr_altautocompl	"Nadomestni videz">
+<!ENTITY Ctr_urlbar_uc		"Onemogoči značilnost 'poenotenega samodokončevanja'">
 <!ENTITY Ctr_lbsugresi		"Onemogoči omejitev višine">
-<!ENTITY Ctr_lbsugres		"Število rezultatov (možnost about:config)">
+<!ENTITY Ctr_lbsugres		"Število rezultatov">
 <!ENTITY Ctr_lbsbradius		"Polmer obrobe po meri naslovne in iskalne vrstice">
 
 <!ENTITY Ctr_menubar_items	"Položaj predmetov menija">
@@ -335,10 +335,10 @@
 <!ENTITY Ctr_tabthrobber	"Privzeta slika nalaganja">
 <!ENTITY Ctr_bmanimation	"Animacija dodajanja med zaznamke">
 <!ENTITY Ctr_pananimation	"Animacija odpiranja podokna">
-<!ENTITY Ctr_tabanimation	"Animacija zapiranja/odpiranja zavihkov (možnost about:config)">
-<!ENTITY Ctr_dlanimation	"Animacija 'obvestila o prenosih' (možnost about:config)">
-<!ENTITY Ctr_fsanimation	"Celozaslonske animacije (možnost about:config)">
-<!ENTITY Ctr_fsaduration	"Celozaslonske animacije za vsebino HTML5 (možnost about:config)">
+<!ENTITY Ctr_tabanimation	"Animacija zapiranja/odpiranja zavihkov">
+<!ENTITY Ctr_dlanimation	"Animacija 'obvestila o prenosih'">
+<!ENTITY Ctr_fsanimation	"Celozaslonske animacije">
+<!ENTITY Ctr_fsaduration	"Celozaslonske animacije za vsebino HTML5">
 
 <!ENTITY Ctr_toolsitem		"Predmet menija v meniju Orodja">
 <!ENTITY Ctr_appmenuitem	"Predmet menija v meniju programskega gumba">
