--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"标签栏不在顶部 (v2) --- [tabsontop=false] 属性">
 <!ENTITY Ctr_tabsontopW1	"v2 仅适用于部分扩展与完整主题!">
 <!ENTITY Ctr_tabsontopI1	"添加属性 [tabsontop=true/false] 至">
-<!ENTITY Ctr_tabsintitlebar	"&brandShortName; 标题栏 (about:config 选项)">
+<!ENTITY Ctr_tabsintitlebar	"&brandShortName; 标题栏">
 <!ENTITY Ctr_tabwidthdef	"(默认)">
 <!ENTITY Ctr_tabwidthcla	"(经典)">
 <!ENTITY Ctr_tabminheight	"高度:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"小于48px的值在多数情况下可能出现问题!">
 <!ENTITY Ctr_square_edges	"方形顶部边角">
 <!ENTITY Ctr_tttitlebar		"在 &brandShortName; 标题栏显示标签页标题">
-<!ENTITY Ctr_tabinsertion	"在当前标签页后插入关联标签页 (about:config)">
+<!ENTITY Ctr_tabinsertion	"在当前标签页后插入关联标签页">
 <!ENTITY Ctr_emptytfavico	"显示网站图标 (如果网站未提供)">
 <!ENTITY Ctr_emptytfavico_n	"无">
 <!ENTITY Ctr_emptytfavico_g	"通用">
@@ -70,7 +70,7 @@
 <!ENTITY Ctr_closei_def		"默认图标">
 <!ENTITY Ctr_closeonleft	"标签页上的备选位置">
 <!ENTITY Ctr_closetabbig	"更大的图标 (20x20px)">
-<!ENTITY Ctr_close_wwltab	"关闭最后一个可见标签页后关闭窗口 (about:config 选项)">
+<!ENTITY Ctr_close_wwltab	"关闭最后一个可见标签页后关闭窗口">
 
 <!ENTITY Ctr_hctpinfotab	"部分标签页变化与 “Hide Caption Titlebar Plus” 扩展不兼容。">
 <!ENTITY Ctr_hctpinfoab		"标题栏上的按钮与 “Hide Caption Titlebar Plus” 扩展不兼容。">
@@ -167,7 +167,7 @@
 <!ENTITY Ctr_ctroldsearch	"旧式搜索">
 <!ENTITY Ctr_ctroldsearchc	"搜索后清除搜索框">
 <!ENTITY Ctr_ctroldsearchr	"搜索后重置为列表中的第一个搜索引擎">
-<!ENTITY Ctr_search_oit		"在新标签页中搜索 (about:config 选项)">
+<!ENTITY Ctr_search_oit		"在新标签页中搜索">
 <!ENTITY Ctr_osearch_meoit	"中键点击: 在新的“前台标签页”中搜索">
 <!ENTITY Ctr_osearch_iwidth	"自动调整弹出框宽度">
 <!ENTITY Ctr_osearch_cwidth	"自定义搜索弹出框宽度">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_am_buticons	"附加组件列表: 用图标替代按钮文本">
 <!ENTITY Ctr_am_hovshowb	"附加组件列表: 仅在鼠标悬停时显示按钮">
 <!ENTITY Ctr_addonversion	"附加组件页面: 显示附加组件版本">
-<!ENTITY Ctr_xpinstallui	"附加组件管理器: 旧式附加组件安装窗口(about:config 选项)">
+<!ENTITY Ctr_xpinstallui	"附加组件管理器: 旧式附加组件安装窗口">
 <!ENTITY Ctr_bmbutton		"书签菜单按钮">
 <!ENTITY Ctr_hiderecentbm	"书签弹出菜单: 隐藏最近添加的书签">
 <!ENTITY Ctr_hideeditbm		"书签星星图标: 隐藏弹出菜单(如果页面未添加到书签)">
@@ -266,10 +266,10 @@
 <!ENTITY Ctr_lbsbsize		"自定义地址栏和搜索栏的宽度">
 <!ENTITY Ctr_searchbar		"搜索栏">
 <!ENTITY Ctr_autocomplete	"自动完成弹出框">
-<!ENTITY Ctr_altautocompl	"备选的外观(实验性)">
-<!ENTITY Ctr_urlbar_uc		"禁用 “统一自动完成” 功能 (about:config 选项)">
+<!ENTITY Ctr_altautocompl	"备选的外观">
+<!ENTITY Ctr_urlbar_uc		"禁用 “统一自动完成” 功能">
 <!ENTITY Ctr_lbsugresi		"禁用高度限制">
-<!ENTITY Ctr_lbsugres		"结果数量 (about:config 选项)">
+<!ENTITY Ctr_lbsugres		"结果数量">
 <!ENTITY Ctr_lbsbradius		"自定义地址栏与搜索栏边框弧度">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
@@ -335,10 +335,10 @@
 <!ENTITY Ctr_tabthrobber	"默认正在加载图片">
 <!ENTITY Ctr_bmanimation	"加入书签动画">
 <!ENTITY Ctr_pananimation	"打开面板动画">
-<!ENTITY Ctr_tabanimation	"打开/关闭标签页动画 (about:config 选项)">
-<!ENTITY Ctr_dlanimation	"“下载提醒”动画 (about:config 选项)">
-<!ENTITY Ctr_fsanimation	"全屏动画 (about:config 选项)">
-<!ENTITY Ctr_fsaduration	"HTML5 内容使用全屏动画 (about:config 选项)">
+<!ENTITY Ctr_tabanimation	"打开/关闭标签页动画">
+<!ENTITY Ctr_dlanimation	"“下载提醒”动画">
+<!ENTITY Ctr_fsanimation	"全屏动画">
+<!ENTITY Ctr_fsaduration	"HTML5 内容使用全屏动画">
 
 <!ENTITY Ctr_toolsitem		"在工具菜单中显示菜单项">
 <!ENTITY Ctr_appmenuitem	"在 &brandShortName; 按钮菜单中显示菜单项">
