--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"Tabs not on top (v2) --- [tabsontop=false] attribute">
 <!ENTITY Ctr_tabsontopW1	"v2 is for some add-ons and complete themes only!">
 <!ENTITY Ctr_tabsontopI1	"Attribute [tabsontop=true/false] gets added to">
-<!ENTITY Ctr_tabsintitlebar	"Use &brandShortName; titlebar instead of OS titlebar (about:config preference)">
+<!ENTITY Ctr_tabsintitlebar	"Use &brandShortName; titlebar instead of OS titlebar">
 <!ENTITY Ctr_tabwidthdef	"(default)">
 <!ENTITY Ctr_tabwidthcla	"(classic)">
 <!ENTITY Ctr_tabminheight	"Height:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Values below 48 px will cause glitches in most cases!">
 <!ENTITY Ctr_square_edges	"Squared top corners">
 <!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
-<!ENTITY Ctr_tabinsertion	"Insert related tab after current tab (about:config preference)">
+<!ENTITY Ctr_tabinsertion	"Insert related tab after current tab">
 <!ENTITY Ctr_emptytfavico	"Show favicon (if a site does not offer one)">
 <!ENTITY Ctr_emptytfavico_n	"None">
 <!ENTITY Ctr_emptytfavico_g	"Generic">
@@ -70,7 +70,7 @@
 <!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Alternative position on tab">
 <!ENTITY Ctr_closetabbig	"Bigger icon (20x20 px)">
-<!ENTITY Ctr_close_wwltab	"Close window with last visible tab (about:config preference)">
+<!ENTITY Ctr_close_wwltab	"Close window with last visible tab">
 
 <!ENTITY Ctr_hctpinfotab	"Some tab variations are not compatible to 'Hide Caption Titlebar Plus' add-on.">
 <!ENTITY Ctr_hctpinfoab		"Button on titlebar is not compatible to 'Hide Caption Titlebar Plus' add-on.">
@@ -167,7 +167,7 @@
 <!ENTITY Ctr_ctroldsearch	"Old search">
 <!ENTITY Ctr_ctroldsearchc	"Clear searchbox after search">
 <!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
-<!ENTITY Ctr_search_oit		"Open search in new tab (about:config preference)">
+<!ENTITY Ctr_search_oit		"Open search in new tab">
 <!ENTITY Ctr_osearch_meoit	"Middle-clicks: search in new 'foreground tab'">
 <!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
 <!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
 <!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Add-on lists: show add-on version">
-<!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
+<!ENTITY Ctr_xpinstallui	"Old add-on install window">
 <!ENTITY Ctr_bmbutton		"Bookmarks menu button">
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
@@ -266,10 +266,10 @@
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
 <!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
-<!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature (about:config preference)">
+<!ENTITY Ctr_altautocompl	"Alternative appearance">
+<!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsugres		"Number of results">
 <!ENTITY Ctr_lbsbradius		"Custom border roundness for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Menu items position">
@@ -335,10 +335,10 @@
 <!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Bookmarking animation">
 <!ENTITY Ctr_pananimation	"Panel opening animation">
-<!ENTITY Ctr_tabanimation	"Tab closing/opening animation (about:config preference)">
-<!ENTITY Ctr_dlanimation	"'Download notification' animation (about:config preference)">
-<!ENTITY Ctr_fsanimation	"Full screen animations (about:config preference)">
-<!ENTITY Ctr_fsaduration	"Full screen animations for HTML5 content (about:config preferences)">
+<!ENTITY Ctr_tabanimation	"Tab closing/opening animation">
+<!ENTITY Ctr_dlanimation	"'Download notification' animation">
+<!ENTITY Ctr_fsanimation	"Full screen animations">
+<!ENTITY Ctr_fsaduration	"Full screen animations for HTML5 content">
 
 <!ENTITY Ctr_toolsitem		"Menuitem in tools menu">
 <!ENTITY Ctr_appmenuitem	"Menuitem in appbuttons menu">
