--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -74,7 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Nekatere različice niso združljive z dodatkom 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Gumb na nazivni vrstici ni združljiv z dodatkom 'Hide Caption Titlebar Plus'.">
-<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
+<!ENTITY Ctr_tobainfotab	"Dodatek 'Tabs on Bottom' ni združljiv s '&Ctr_title;' in ga je treba onemogočiti. Namesto tega uporabite razpoložljive nastavitve '&Ctr_cuitabsnontop;'!">
 
 <!ENTITY Ctr_appbutton		"Programski gumb">
 <!ENTITY Ctr_appbutton0		"Gumb je onemogočen">
