--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -74,7 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Mõned kaardi variatsioonid ei ühildu lisaga 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Nupp tiitliribal ei ühildu lisaga 'Hide Caption Titlebar Plus'.">
-<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
+<!ENTITY Ctr_tobainfotab	"Lisa 'Tabs on Bottom' ei ühildu lisaga '&Ctr_title;' ja see tuleks keelata. Kasuta hoopis olemasolevaid '&Ctr_cuitabsnontop;' sätteid!">
 
 <!ENTITY Ctr_appbutton		"&brandShortName;i nupp">
 <!ENTITY Ctr_appbutton0		"Nupp keelatud">
